# KartriderDB

./: DataBase  getMatchId.py  getMatchInfo.py  getNameId.py  main.py  pyproject.toml
